[package]
name = "ccm-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
jsonrpc-pubsub = "18.0.0"
futures = "0.3"
log = "0.4.8"
hex-literal = "0.3.1"
serde_json = '1.0'
bs58 = "0.4.0"
sc-cli = { git = "http://47.102.99.229:17000/block-chain/substrate-v2", features = ["wasmtime"] }
sp-core = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-executor = { git = "http://47.102.99.229:17000/block-chain/substrate-v2", features = ["wasmtime"] }
sc-service = { git = "http://47.102.99.229:17000/block-chain/substrate-v2", features = ["wasmtime"] }
sc-telemetry = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-keystore = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-transaction-pool = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-transaction-pool-api = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-consensus-aura = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-consensus-aura = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-consensus = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-consensus = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-consensus-manual-seal = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-network = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-finality-grandpa = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-finality-grandpa = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-client-api = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-runtime = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-timestamp = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-inherents = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-api = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-rpc-api = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-blockchain = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-block-builder = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sc-basic-authorship = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
substrate-frame-rpc-system = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-transaction-payment-rpc = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
frame-benchmarking-cli = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

fc-consensus = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
fp-consensus = {git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
ccm-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
fp-rpc = {git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
fc-rpc-core = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
fc-db = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
fc-mapping-sync = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }

pallet-evm = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
pallet-ethereum = {git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
pallet-dynamic-fee = { git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
penguin-farm={path = "../../frame/penguin-farm" }


[build-dependencies]
substrate-build-script-utils = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

[features]
default = ["aura"]
aura = ["ccm-runtime/aura"]
manual-seal = ["ccm-runtime/manual-seal"]
runtime-benchmarks = [
	"ccm-runtime/runtime-benchmarks",
]
