[package]
name = "ccm-runtime"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4.8" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pallet-treasury={ default-features = false,git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-bounties ={ default-features = false,git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-scheduler = { default-features = false,git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-collective = { default-features = false,git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-ethereum = { default-features = false, path = "../../frame/ethereum" }
pallet-evm = { default-features = false, path = "../../frame/evm" }
pallet-nft = { default-features = false, path = "../../frame/nft" }
orml-nft  = { default-features = false, path = "../../frame/orml/nft" }
penguin-farm  = { default-features = false, path = "../../frame/penguin-farm" }

pallet-dynamic-fee = { default-features = false, path = "../../frame/dynamic-fee" }
pallet-evm-precompile-simple = { default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { default-features = false, path = "../../frame/evm/precompile/sha3fips" }
pallet-evm-precompile-modexp = { default-features = false, path = "../../frame/evm/precompile/modexp" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-base-fee = { default-features = false, path = "../../frame/base-fee" }
pallet-assets = { default-features = false, path="../../frame/assets" }
primitive={default-features = false, path="../../primitives/primitive"}

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }

fp-rpc = { default-features = false, path = "../../primitives/rpc" }
fp-self-contained = { default-features = false, path = "../../primitives/self-contained" }

scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"primitive/std",
	"pallet-nft/std",
	"orml-nft/std",
	"codec/std",
	"serde",
	"sha3/std",
	"pallet-assets/std",
    "pallet-collective/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
	"fp-self-contained/std",
  "pallet-scheduler/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-base-fee/std",
    "pallet-treasury/std",
	"pallet-bounties/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
