[package]
name = "ccm-runtime"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4.8" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pallet-treasury={ default-features = false,git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-bounties ={ default-features = false,git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-scheduler = { default-features = false,git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
frame-executive = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
frame-support = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-democracy = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
frame-system = { default-features = false, package = "frame-system", git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
frame-system-rpc-runtime-api = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-collective = { default-features = false,git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-ethereum = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2"  }
pallet-elections-phragmen = { default-features = false,git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-evm = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2"}
pallet-nft = { default-features = false, path = "../../frame/nft" }
orml-nft  = { default-features = false, path = "../../frame/orml/nft" }
penguin-farm  = { default-features = false, path = "../../frame/penguin-farm" }

pallet-node-authorization = { version = "4.0.0-dev", default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-dynamic-fee = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
pallet-evm-precompile-simple = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
pallet-evm-precompile-sha3fips = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2" }
pallet-evm-precompile-modexp = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/frontiner-v2"}
pallet-aura = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-balances = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-grandpa = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-randomness-collective-flip = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-sudo = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-timestamp = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-transaction-payment = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
pallet-assets = { default-features = false, path="../../frame/assets" }
primitive={default-features = false, path="../../primitives/primitive"}

sp-api = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-block-builder = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2"}
sp-consensus-aura = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-core = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-inherents = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2"}
sp-io = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-offchain = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-runtime = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-session = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-std = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-transaction-pool = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-version = { default-features = false, git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

fp-rpc = { default-features = false, git = "http://47.102.99.229:17000/block-chain/frontiner-v2"}


# benchmarking dependencies
frame-benchmarking = { git = "http://47.102.99.229:17000/block-chain/substrate-v2", default-features = false, optional = true }
frame-system-benchmarking = { git = "http://47.102.99.229:17000/block-chain/substrate-v2", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "http://47.102.99.229:17000/block-chain/substrate-v2" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"primitive/std",
	"pallet-nft/std",
	"orml-nft/std",
	"codec/std",
	"serde",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"sha3/std",
	"pallet-assets/std",
    "pallet-collective/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
  "pallet-scheduler/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	'pallet-node-authorization/std',
    "pallet-treasury/std",
	"pallet-bounties/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",
	"penguin-farm/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
#	"pallet-ethereum/runtime-benchmarks",
#	"pallet-evm/runtime-benchmarks",
]
