[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
pallet-balances = { default-features = false,  git = "http://47.102.99.229:17000/block-chain/substrate-v2" }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false, optional = true }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
primitive-types = { version = "0.10.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
evm = { version = "0.33.0", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.33.0", default-features = false }
evm-gasometer = { version = "0.33.0", default-features = false }
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"fp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"log/std",
	"hex/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
