[package]
name = "pallet-nft"
version = "0.1.0"
authors = ["keivn.li"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
enumflags2 = { version = "0.6.4" }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
# primitives
#common-primitives ={path="../../primitives/common", default-features = false }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", optional = true }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }

# frame dependencies
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate",rev="ba153b9ae050eda022f002d74d76f98d1e339a81", default-features = false,optional = true }

pallet-assets =  { version = "4.0.0-dev", path="../assets", default-features = false }

orml-nft = { path = "../orml/nft", default-features = false }
#orml-traits = { path = "../orml/traits", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "log/std",
	"orml-nft/std",
    "pallet-balances/std",
    "sp-keyring",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-assets/std",
	"scale-info/std"
#	"primitives/std",
]
runtime-benchmarks = [
   "frame-benchmarking",
   "frame-system/runtime-benchmarks",
   "frame-support/runtime-benchmarks",
]
